# bevy_diesel

./: Cargo.toml  README.md  plan.md
backends/bevy_diesel_avian3d_backend/: Cargo.toml
backends/diesel_avian2d/: Cargo.toml  plan.md
backends/diesel_avian3d/: Cargo.toml  plan.md
backends/diesel_avian3d/examples/: fireballs.rs
backends/diesel_avian3d/src/: ballistics.rs  collision.rs  impulse.rs  lib.rs  projectile.rs  spawn.rs  velocity.rs
backends/diesel_grid2d/: Cargo.toml  plan.md
backends/diesel_monster/: Cargo.toml  plan.md
crates/diesel/: Cargo.toml
crates/diesel/examples/: validators.rs
crates/diesel/src/: ability_pool.rs  backend.rs  despawn.rs  dot.rs  effect.rs  filters.rs  invoke.rs  lib.rs  pipeline.rs  print.rs  propagation.rs  spawn.rs
crates/diesel/src/gauge/: instant.rs  modifiers.rs
crates/diesel/src/gauge/pae/: mod.rs
crates/diesel/src/gearbox/: go_off.rs  mod.rs  repeater.rs  templates.rs
crates/gauge/core/: Cargo.toml
crates/gearbox/: Cargo.toml
crates/gearbox/benches/: observer_bench.rs
crates/gearbox/crates/core/: Cargo.toml
crates/gearbox/crates/core/benches/: schedule_bench.rs
crates/gearbox/crates/core/examples/: schedule_stress.rs
crates/gearbox/crates/core/src/: commands.rs  compat.rs  lib.rs  resolve.rs
crates/gearbox/crates/legacy/: Cargo.toml
crates/gearbox/examples/: observer_stress.rs
crates/gearbox/src/: lib.rs
examples/: damage_pipeline.rs  validators.rs  viewpoint_system.rs
proposals/: Conditions.md  Targetting.md  Test_cases.md
src/: ability_pool.rs  avian3d.rs  backend.rs  despawn.rs  diagnostics.rs  dot.rs  effect.rs  events.rs  filters.rs  invoke.rs  invoker.rs  lib.rs  node_context.rs  pipeline.rs  print.rs  propagation.rs  random.rs  spawn.rs  subeffects.rs  target.rs
src/gauge/: instant.rs  mod.rs  modifiers.rs
src/gauge/pae/: mod.rs  state_machine.rs
src/gearbox/: go_off.rs  mod.rs  repeater.rs  templates.rs
