[workspace]
members = ["backends/diesel_avian2d",
  "backends/diesel_avian3d", "backends/diesel_grid2d", "backends/diesel_monster",
  "crates/diesel",
  "crates/gauge/core",
  "crates/gauge/macros",
  "crates/gearbox",
  "crates/gearbox/crates/core",
  "crates/gearbox/crates/editor",
  "crates/gearbox/crates/legacy",
  "crates/gearbox/crates/legacy_macros",
  "crates/gearbox/crates/macros",
  "crates/gearbox/crates/protocol",
]
resolver = "3"
