[package]
name = "bevy_diesel"
version = "0.2.0"
edition = "2024"
description = "A generic ability engine framework for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_diesel"
homepage = "https://github.com/DEMIURGE-studio/bevy_diesel"
keywords = ["bevy", "abilities", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = "0.18.0"
rand = "0.9"
inventory = "0.3"
bevy_gauge = { path = "../bevy_gauge" }
bevy_gearbox = { path = "../bevy_gearbox", features = ["gauge"] }