[package]
name = "diesel_avian3d"
version = "0.1.0"
edition = "2024"
description = "Avian3d spatial backend for bevy_diesel"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_diesel"
homepage = "https://github.com/DEMIURGE-studio/bevy_diesel"
keywords = ["bevy", "avian", "physics", "gamedev"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy_diesel = { path = "../.." }
# How can I get rid of this?
bevy_gauge = { path = "../../../bevy_gauge" }
bevy = "0.18.0"
avian3d = "0.6"
rand = "0.9"

[features]
default = []
server = ["bevy_diesel/server"]
trace_tracy = ["bevy/trace_tracy"]
